    - 035 program mount repeated last character of map output.
    - 036 make make fail on failure.
- fix memory leak in cache_clean function (Jeff Moyer).
- remove restriction of mounting ncpfs filesystems (Mike Fleetwood).
    - see README.ncpfs.
- second signal race fix (almost what Chris Feist recommended).
- fix the ordering of +ypmapname entries in master map (Chris Feist).
- fix backslash parse for smb mount option username\password.

19/05/2004 autofs-4.1.3
-----------------------
- fixed bug processing --verbose option in init scripts.
- added missing parameter in call to run fsck on ext2 module (Jeff Moyer).
- added check for executable existance in getldapmounts in init script.
- updated comment about option handling in getmounts in init script.
- updated kernel module patches.
- fix to init script for reload option (Michael Blandford).
- autofs now requires autoconf later than 2.5.
- replicated server fixup.
- fix segv in NIS lookup module (Jeff Moyer).
- init script fix for Debian (Thorild Selen).
- fix pie option not checking for runable executable.
- add NFS V3 and TCP to rpc discovery.
- make nonstrict the default for multi-mount map entries.

07/04/2004 autofs-4.1.2
-----------------------
- merge patches from Jeff Moyer.
   - Change (back) compile option -fpic -> -fPIC.
   - add code to recognise old LDAP master map format.
   - document limitation of direct mounts obscuring mount
     points in README.direct.
   - fix error in detecting duplicate master map entries
     in init script.
   - add check for automount base already mounted.
   - check for pie support and enable compile option if
     available.
   - corrections to init script including send HUP signal
     on reload.
- fix unchecked return from get_best_mount.
- add example file master map using LDAP.
- 1st attempt to deal with smb mounts that go away while
  mounted.
- updated kernel patches.

14/03/2004 autofs-4.1.1
-----------------------
- added CHANGELOG.